--- a/src/stack_detect/package.xml
+++ b/src/stack_detect/package.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>wrapper_sample</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="external-projects-XD@ocado.com">External Projects</maintainer> 
-  <license>Private to Ocado Innovation</license>
+  <name>stack_detection</name>
+  <version>0.0.1</version>
+  <description>Detect uppermost item on a stack</description>
+  <maintainer email="luca.michael.lach@upc.edu">Luca Lach</maintainer> 
+  <license>MIT</license>
+
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
