--- a/src/stack_detect/package.xml
+++ b/src/stack_detect/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>stack_detection</name>
+  <name>stack_detect</name>
   <version>0.0.1</version>
   <description>Detect uppermost item on a stack</description>
   <maintainer email="luca.michael.lach@upc.edu">Luca Lach</maintainer> 
