add move arm service and data collection launch file

--- a/src/stack_msgs/CMakeLists.txt
+++ b/src/stack_msgs/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "srv/MoveArm.srv"
   "srv/CloudPose.srv"
   "action/RecordCloud.action"
   DEPENDENCIES geometry_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
