--- a/src/stack_msgs/CMakeLists.txt
+++ b/src/stack_msgs/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/MoveArm.srv"
   "srv/StoreData.srv"
+  "srv/GripperService.srv"
   "srv/CloudPose.srv"
   "srv/CloudPoseVary.srv"
   "action/RecordCloud.action"
