--- a/src/stack_msgs/CMakeLists.txt
+++ b/src/stack_msgs/CMakeLists.txt
@@ -15,6 +15,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/MoveArm.srv"
   "srv/DINOSrv.srv"
   "srv/SAM2Srv.srv"
+  "srv/StackDetect.srv"
   "srv/StoreData.srv"
   "srv/GripperService.srv"
   "srv/CloudPose.srv"
