build new gripper msgs

--- a/src/stack_msgs/CMakeLists.txt
+++ b/src/stack_msgs/CMakeLists.txt
@@ -17,6 +17,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/DINOSrv.srv"
   "srv/SAM2Srv.srv"
   "srv/RollerGripper.srv"
+  "srv/RollerGripperV2.srv"
   "srv/StackDetect.srv"
   "srv/StoreData.srv"
   "srv/GripperService.srv"
